--- a/templates/home.html
+++ b/templates/home.html
@@ -125,7 +125,7 @@
                     <div class="offer-time">
                         <span class="offer-title d-none d-sm-block">Hurry Up! Offer ends in:</span>
                         <div class="countdown">
-                            <div class="countdown-inner b-radius" data-countdown="" data-date="Mar 02 2022 20:20:22">
+                            <div class="countdown-inner b-radius" data-countdown="" data-date="Mar 29 2024 20:20:22">
                                 <ul class="text-center">
                                     <li><span data-days="">36</span> Days</li>
                                     <li><span data-hours="">8</span> Hours</li>
@@ -156,7 +156,7 @@
                                 </div>
                                 <div class="product-action">
                                     <a href="#" class="icon-box icon-box-1" data-bs-toggle="modal"
-                                        data-bs-target="#productModalId">
+                                        data-bs-target="#productModalId-{{forloop.counter}}">
                                         <i class="fal fa-eye"></i>
                                         <i class="fal fa-eye"></i>
                                     </a>
@@ -213,5 +213,113 @@
     </div>
 </section>
 <!-- topsell__area-end -->
+
+
+
+{% for i in product %}
+        <!-- shop modal start -->
+        <div class="modal fade" id="productModalId-{{forloop.counter}}" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered product__modal" role="document">
+                <div class="modal-content">
+                    <div class="product__modal-wrapper p-relative">
+                        <div class="product__modal-close p-absolute">
+                            <button data-bs-dismiss="modal"><i class="fal fa-times"></i></button>
+                        </div>
+                        <div class="product__modal-inner">
+                            <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                <div class="product__modal-box">
+                                    <div class="tab-content" id="modalTabContent">
+                                        {% for image in i.product_image_set.all %}
+                                        <div class="tab-pane fade{% if forloop.first %} show active{% endif %}" id="nav{{image.id}}" role="tabpanel" aria-labelledby="nav{{image.id}}-tab">
+                                            <div class="product__modal-img w-img">
+                                                <img src="{{image.Image_url}}" alt="">
+                                            </div>
+                                        </div>
+                                        {% endfor %}
+                                    </div>
+                                    <ul class="nav nav-tabs" id="modalTab" role="tablist">
+                                        {% for image in i.product_image_set.all %}
+                                        <li class="nav-item" role="presentation">
+                                            <button class="nav-link{% if forloop.first %} active{% endif %}" id="nav{{image.id}}-tab" data-bs-toggle="tab" data-bs-target="#nav{{image.id}}" type="button" role="tab" aria-controls="nav{{image.id}}" aria-selected="{% if forloop.first %}true{% else %}false{% endif %}">
+                                                <img style="height: 85px; width: 85px;" src="{{image.Image_url}}" alt="">
+                                            </button>
+                                        </li>
+                                        {% endfor %}
+                                        
+                                        </ul>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                                <div class="product__modal-content">
+                                    <h4><a href="product-details.html">{{i.Product_Name}}</a></h4>
+                                    <div class="product__review d-sm-flex">
+                                        <div class="rating rating__shop mb-10 mr-30">
+                                        <ul>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                            <li><a href="#"><i class="fal fa-star"></i></a></li>
+                                        </ul>
+                                        </div>
+                                        <div class="product__add-review mb-15">
+                                        <span>01 review</span>
+                                        </div>
+                                    </div>
+                                    <div class="product__price">
+                                        <span>${{i.Price}}</span>
+                                    </div>
+                                    <div class="product__modal-des mt-20 mb-15">
+                                        <ul>
+                                            <li><a href="#"><i class="fas fa-circle"></i> {{i.Product_information | safe | truncatechars:600}}</a></li>
+                                            
+                                        </ul>
+                                    </div>
+                                    <div class="product__stock mb-20">
+                                        <span class="mr-10">Availability :</span>
+                                        <span>{{i.Availability}} in stock</span>
+                                    </div>
+                                    <div class="product__modal-form">
+                                        <form action="#">
+                                        <div class="pro-quan-area d-lg-flex align-items-center">
+                                            <div class="product-quantity mr-20 mb-25">
+                                                <div class="cart-plus-minus p-relative"><input type="text" value="1" /></div>
+                                            </div>
+                                            <div class="pro-cart-btn mb-25">
+                                                <button class="cart-btn" type="submit">Add to cart</button>
+                                            </div>
+                                        </div>
+                                        </form>
+                                    </div>
+                                    <div class="product__stock mb-30">
+                                        <ul>
+                                            <li><a href="#">
+                                                <span class="sku mr-10">SKU:</span>
+                                                <span>{{i.Model_Name}}</span></a>
+                                            </li>
+                                            <li><a href="#">
+                                                <span class="cat mr-10">Categories:</span>
+                                                <span>{{i.Categroy}}</span></a>
+                                            </li>
+                                            <li><a href="#">
+                                                <span class="tag mr-10">Tags:</span>
+                                                <span>{{i.Tags}}</span></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- shop modal end -->
+{% endfor %}
+
+
+
 
 {% endblock %}
