product detail show

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -151,7 +151,7 @@
                                 </p>
                             </div>
                             <div class="payment-image text-center mb-25">
-                                <a href="contact.html"><img src="assets/img/payment/payment.png" alt=""></a>
+                                <a href="contact.html"><img src="/assets/img/payment/payment.png" alt=""></a>
                             </div>
                             <div class="copy-right-area text-center">
                                 <p>Copyright © <span>DukaMarket.</span> All Rights Reserved. Powered by <a href="#"><span class="main-color">Theme_Pure.</span></a></p>
@@ -166,24 +166,24 @@
 <!-- footer-end -->
 
   <!-- JS here -->
-  <script src="static/assets/js/vendor/jquery.js"></script>    
-  <script src="static/assets/js/vendor/waypoints.js"></script>
-  <script src="static/assets/js/bootstrap-bundle.js"></script>
-  <script src="static/assets/js/meanmenu.js"></script>
-  <script src="static/assets/js/swiper-bundle.js"></script>
-  <script src="static/assets/js/tweenmax.js"></script>
-  <script src="static/assets/js/owl-carousel.js"></script>
-  <script src="static/assets/js/magnific-popup.js"></script>
-  <script src="static/assets/js/parallax.js"></script>
-  <script src="static/assets/js/backtotop.js"></script>
-  <script src="static/assets/js/nice-select.js"></script>
-  <script src="static/assets/js/countdown.min.js"></script>
-  <script src="static/assets/js/counterup.js"></script>
-  <script src="static/assets/js/wow.js"></script>
-  <script src="static/assets/js/isotope-pkgd.js"></script>
-  <script src="static/assets/js/imagesloaded-pkgd.js"></script>
-  <script src="static/assets/js/ajax-form.js"></script>
-  <script src="static/assets/js/main.js"></script>
+  <script src="/static/assets/js/vendor/jquery.js"></script>    
+  <script src="/static/assets/js/vendor/waypoints.js"></script>
+  <script src="/static/assets/js/bootstrap-bundle.js"></script>
+  <script src="/static/assets/js/meanmenu.js"></script>
+  <script src="/static/assets/js/swiper-bundle.js"></script>
+  <script src="/static/assets/js/tweenmax.js"></script>
+  <script src="/static/assets/js/owl-carousel.js"></script>
+  <script src="/static/assets/js/magnific-popup.js"></script>
+  <script src="/static/assets/js/parallax.js"></script>
+  <script src="/static/assets/js/backtotop.js"></script>
+  <script src="/static/assets/js/nice-select.js"></script>
+  <script src="/static/assets/js/countdown.min.js"></script>
+  <script src="/static/assets/js/counterup.js"></script>
+  <script src="/static/assets/js/wow.js"></script>
+  <script src="/static/assets/js/isotope-pkgd.js"></script>
+  <script src="/static/assets/js/imagesloaded-pkgd.js"></script>
+  <script src="/static/assets/js/ajax-form.js"></script>
+  <script src="/static/assets/js/main.js"></script>
 </body>
 
 <!-- Mirrored from themepure.net/template/dukamarket/dukamarket/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Feb 2022 17:21:38 GMT -->
