--- a/templates/home.html
+++ b/templates/home.html
@@ -147,9 +147,11 @@
                         <div class="product__item swiper-slide">
                             <div class="product__thumb fix">
                                 <div class="product-image w-img">
-                                    <a href="product-details.html">
+                                 
+                                    <a href="{{i.get_absolute_url}}">
                                         <img style="height: 250px;" src="{{i.Featured_Image}}" alt="product">
                                     </a>
+                                    
                                 </div>
                                 <div class="product__offer">
                                     <span class="discount">-{{i.Discount}}%</span>
